07-kapp-ytt/bundle/config/namespace.yaml
#@ load("@ytt:data", "data")
#@ load("helpers.lib.yml", "namespace", "labels")
---
apiVersion: v1
kind: Namespace
metadata:
  name: #@ namespace()
  labels: #@ labels("app")
