07-kapp-ytt/bundle/config/app.yaml
#@ load("@ytt:data", "data")
#@ load("helpers.lib.yml", "namespace", "labels")
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: #@ namespace()
  labels: #@ labels("app")
spec:
  replicas: #@ data.values.app.replicas
  selector:
    matchLabels: #@ labels("app")
  template:
    metadata:
      labels: #@ labels("app")
    spec:
      containers:
      - image: ghcr.io/alexandreroman/spring-on-k8s
        name: app
        resources:
          limits:
            memory: 1Gi
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            port: 8080
            path: /actuator/health/liveness
        readinessProbe:
          httpGet:
            port: 8080
            path: /actuator/health/readiness
        volumeMounts:
        - mountPath: /etc/config
          name: config
      volumes:
      - name: config
        configMap:
          name: app
